Updated Employee Management System features